	-> KWS
	-> new default parameters for HTR training
	-> CITlab Advanced LA is now the default selection

1.3.7:
	-> fix NPE in Text2Image
	-> add "value" column in tag search&replace
	
1.4.0:
	-> add BIDI support in transcription widget
	-> refined PDF export
	-> Docx export considers tables resp. text in tables
	-> adapted tag search and replace
	-> new export option: simple txt export
	-> export images without loading transcripts
	-> Transcripts: Revert to the version(s) before the last (batch) job was completed
	-> add 'What is new' in Transkribus (make CHANGES.txt visible to the user)
	-> add search for documents by collection ID
	-> remove outdated TipsOfTheDay 
	-> add direct link to Transkribus HowTo guides
	-> extended virtual keyboard: Hebrew and Arabic are new
	-> change text based tagging system
	-> take local tmp directory as default for pdf upload
	
1.4.1
	-> CITlabAdvanced layout analysis method can now be configured in user interface
	-> KWS: experimental test feature
	-> bugfix: cannot open local document
	-> bugfix: apply properties for tags over all continuations in property editor 
	-> bugfix: cannot open page due to widget closed exception
	-> All tag definitions get stored in DB on server for later use in web interface
	-> Status of pages can be set for an entire document in the 'Document Manager'
	-> fix slow image rendering on Windows systems
	-> first draft of new structure type editor
	-> DOCX export: allow to force page breaks for each single page in a document
	-> sync dialog: allow synchronizing from txt files
	-> bugfix: memory and path reading errors for pdf upload 
	-> bugfix: resetting symbolic image during deletion of document
	-> PDF export: select your preferred font or use the default one ('FreeSerif') - mainly to cover the different used character sets
	-> compare versions now also considers tables
	-> Add 'saveTranscriptDialog' before tools start their job
	-> updated config for test server with separate imagestore